--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.4.3",
     "autoprefixer": "10.4.14",
     "emailjs-com": "^3.2.0",
     "eslint": "8.40.0",
