--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emailjs-com": "^3.2.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "google-fonts-loader": "^1.0.2",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
