--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "emailjs-com": "^3.2.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-   
     "next": "13.4.2",
+    "next-i18next": "^14.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
