--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "emailjs-com": "^3.2.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "i18next": "^23.2.11",
     "next": "13.4.2",
     "next-i18next": "^14.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.0.2",
     "react-icons": "^4.8.0",
     "react-scroll": "^1.8.9",
     "tailwindcss": "^3.3.2"
