--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next": "^23.2.11",
     "next": "13.4.2",
     "next-i18next": "^14.0.0",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
